--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,15 @@ once_cell = "1.18.0"
 [profile.dev]
 # Not usable at opt-level 0, at least with software renderer
 opt-level = 1
+
+[patch."https://github.com/pop-os/libcosmic"]
+iced = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_runtime = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_renderer = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_core = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_widget = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_futures = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_accessibility = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_tiny_skia = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_style = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
+iced_sctk = { git = "https://github.com/ids1024/iced", branch = "subsurface" }
